# ecly

./: .gitmodules  Cargo.toml  README.md
crates/ls-client/: Cargo.toml
crates/ls-client/src/: json_rpc.rs  lib.rs  lsp.rs
crates/ls-client/src/lsp/: capabilities.rs  messages.rs
src/: log.rs  main.rs
src/tui/: mod.rs  util.rs
src/tui/widget/: mod.rs  paragraph.rs  text_scroll.rs
