[package]
name = "ecly"
version = "0.1.0"
edition = "2018"
member= []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.21"
terminal_size = "0.1"
# tui = { version = "0.16", default-features = false, features = ['crossterm'] }
# ls-client = { path = "./crates/ls-client" }